# vse-sync-collection-tools

./: .gitignore  .golangci.yaml  .licenserc.yaml  .pre-commit-config.yaml  .yamllint.yaml  Containerfile  LICENSE  Makefile  NOTICE  README.md  config.yaml  cormorant_env.yaml  cormorant_test_config.yaml  cormorant_tests.yaml  example_env.yaml  example_test_config.yaml  go.mod  go.sum  go.work  main.go  prototype.py  pyproject.toml  setup.cfg  tgm.fsm  tgm.py
.github/workflows/: build-image.yaml  merge-requirements.yaml  pre_main.yaml
collector-framework/: README.md  go.mod  go.sum
collector-framework/doc/: implementing_a_collector.md
collector-framework/testutils/: fake_executor.go  mocked_clientset.go
doc/: LIST_OF_TESTS.md  implementing_a_collector.md  implementing_a_test.md  implimenting_a_fetcher.md  reference_config.md  test_configuration.md  test_environment.md  test_execution.md
hack/: grab_logs.go  logs.go
helpers/dpll/: README.md  dpll_kpis.py  get_data.sh  process.py
helpers/gpsd/: ContainerFile  README.md  gpsd.sh  pod_gpsd.yaml
helpers/ngen/: ContainerFile  README.md  preprocess.py  process.py  ptp_ngen_kpis.py
pkg/callbacks/: callbacks.go  callbacks_test.go
pkg/clients/: clients_test.go  clientset.go  command.go  command_test.go  exec_command.go  exec_command_test.go  utils.go
pkg/cmd/: collect.go  common.go  debug_pod.go  detect_mutli_card.go  logs.go  root.go  verifyEnv.go
tests/: .gitmodules  doc.go  run_test.go  suite_test.go
testutils/: fake_executor.go  mocked_clientset.go
tgm-collector/: Makefile  README.md  go.mod  main.go
(+203 files in other folders)
