[metadata]

name = vse-sync-pp
version = 0.1.0
author = Red Hat Telco Solutions
#author_email = 
license = GNU General Public License v2 or later (GPLv2+)
description = Synchronization post-processing
long_description = file: README.md
long_description_content_type = text/markdown
#url = 
project_urls =
    Source Code = https://github.com/redhat-partner-solutions/vse-sync-pp
classifiers =
    Private :: Do Not Upload
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)

[options]

package_dir =
    =src
packages = find:
python_requires =
    >=3.10
#install_requires =

[options.packages.find]

where = src

[tox:tox]

min_version = 4.0

[testenv]

description = run unit tests
deps =
    nose2
    coverage
commands = nose2 -v -C --coverage src/
